# ops-pilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  ops-pilot.example.yml  ops-pilot.yml  ops_pilot_processed.json  ops_pilot_state_flaky_integration_test.json  ops_pilot_state_missing_dependency_docker.json  ops_pilot_state_null_pointer_auth.json  pyproject.toml  run_pipeline.py
.claude/commands/: add-pipeline.md  new-provider.md  run.md  scenario.md  triage.md
.github/workflows/: ops-pilot-self-test.yml
agents/: base_agent.py  coordinator_agent.py  fix_agent.py  investigation_router.py  monitor_agent.py  notify_agent.py  triage_agent.py
agents/tools/: coordinator_tools.py  (+2 more)
demo/: app.py
docs/: CNAME  index.html
providers/: base.py  github.py  gitlab.py  jenkins.py
scripts/: create_sandbox_repos.sh  watch_and_fix.py
shared/: agent_loop.py  audit_log.py  config.py  escalation.py  explanation_gen.py  llm_backend.py  llm_client.py  models.py  state_store.py  task_queue.py  tenant_context.py  trust_context.py  usage_tracker.py
tests/: conftest.py  test_agent_loop.py  test_audit_log.py  test_coordinator_agent.py  test_escalation.py  test_explanation_gen.py  test_fix_agent.py  test_fix_tools.py  test_investigation_router.py  test_llm_client.py  test_missing_api_key.py  test_monitor_agent.py  test_notify_agent.py  test_state_store.py  test_task_queue.py  test_tenant_config.py  test_tenant_context.py  test_tool_registry.py  test_triage_agent.py  test_trust_context.py  test_usage_tracker.py
(+18 files in other folders)
